2012-12-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update distribution build rules.

	* Makefile.in (SRCDIST_FILES): Remove version.c.in; this was moved
	to src/version.c.in, and is now automatically included via...
	(SRCDIST_SUBDIRS): ...this; remove build-aux and build-aux/m4; we want
	only selected files from these, as filtered by specification in...
	(BUILD_AUX_DIRS, BUILD_AUX_FILES): ...these new macros; define them.
	(BLDTAG, SCMTAG, GCMTAG): New release class macros; define them.
	(bindist, licdist, srcdist): Use them.

2012-12-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update CLI implementation hooks for GUI integration.

	* Makefile.in (LIBEXEC_PROGRAMS): Replace gui$EXEEXT with
	guistub$EXEEXT; update make goal references accordingly.

	* src/rites.c (MINGW_GET_GUI): Redefine to be guimain$EXEEXT.
	(MINGW_GET_GFB): Define new fall-back; let it be guistub$EXEEXT.
	(RITES_IMPLEMENTATION): Perform rites for MINGW_GET_GUI.

	* src/clistub.c (main) [cannot exec MINGW_GET_GUI]: Try
	MINGW_GET_GFB instead.

2012-12-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Rename executive core file for GUI implementation.

	* src/guixmld.cpp: File renamed...
	* src/guiexec.cpp: ...to this; its function exceeds original intent.
	* Makefile.in (GUIMAIN_OBJECTS): Update reference accordingly.

2012-12-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Create foundation for implementation of package category tree view.

	* Makefile.in (GUIMAIN_OBJECTS): Add pkgtree.$OBJEXT reference to...
	* src/pkgtree.cpp: ...incorporate this new file; it implements...
	(AppWindowMaker::InitPackageTreeView): ...this new class method...
	(pkgInitCategoryTreeGraft): ...and this new extern "C" function.

	* src/guimain.h (pkgInitCategoryTreeGraft): Declare prototype.
	(AppWindowMaker::InitPackageTreeView): New private method; declare it.
	(AppWindowMaker::PackageTreeView): New member variable; declare it.
