@@ -1,3 +1,14 @@
+2012-12-24  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Work around a GUI action scheduling instability.
+
+	* src/guimain.h (AppWindowMaker::UpdateDataSheet): Declare new method.
+	* src/pkgdata.cpp (AppWindowMaker::UpdateDataSheet): Implement it.
+	(AppWindowMaker::OnNotify): Use it.
+
+	* src/guiexec.cpp (AppWindowMaker::OnCommand) [IDD_REPO_APPLY]:
+	Don't refresh package list view in-place; clear and reload it instead.
+
 2012-12-21  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Update distribution build rules.
